--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
         margin: 0;
       }
     </style>
+     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     <title>React App</title>
   </head>
   <body>
